tests/baselines/reference/FunctionDeclaration5_es6.errors.txt
FunctionDeclaration5_es6.ts(1,14): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.


==== FunctionDeclaration5_es6.ts (1 errors) ====
    function*foo(yield) {
                 ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
    }